<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90006400"
    android:padding="20dp" >
    
    <TextView
        android:id="@+id/uiTitle"
        android:textSize="18dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/uiTitle" />
              
    <TextView 
        android:id="@+id/uiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uiPatientName"
        android:layout_below="@+id/uiTitle"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="14dp" 
        />
    <EditText
        android:id="@+id/sNameField"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textSize="12dp"
        android:layout_below="@+id/uiName"
        android:layout_marginBottom="6dp"        
        android:hint="@string/patientNameHint" 
        />
    
    <TextView 
        android:id="@+id/uiemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/sNameField"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="14dp"  
        />
    <EditText
        android:id="@+id/semailField"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textSize="12dp"
        android:layout_below="@+id/uiemail"
        android:layout_marginBottom="6dp"
        android:hint="@string/emailHint" />
    
	<TextView 
        android:id="@+id/uiphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@+id/semailField"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="14dp"  
        />
    <EditText
        android:id="@+id/sphoneField"
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:textSize="12dp"        
        android:layout_below="@+id/uiphone"
        android:layout_marginBottom="15dp"
        android:hint="@string/phoneHint"
        android:inputType="phone" />
    
    <RelativeLayout 
        android:id="@+id/buttonsArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">
    	<Button
        	android:id="@+id/uiOKButton"
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"    
        	android:layout_marginRight="30dp"
        	android:text="@string/subscribeButton"        
        	android:onClick="uiSubscribeClick" />
    	<Button
        	android:id="@+id/resetButton"
        	android:layout_width="100dp"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@+id/uiOKButton"        
        	android:onClick="uiResetClick"
        	android:text="@string/resetButton" />
    	</RelativeLayout>    

</RelativeLayout>