<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#90006400"
    android:padding="20dp" >
    
    <TextView
        android:id="@+id/uiTitle"
        android:textSize="18dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/uiproviderTitle2" />      
    
    <TextView 
        android:id="@+id/uiemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/uiTitle"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="14dp"  
        />
    <EditText
        android:id="@+id/uiemailField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/uiemail"
        android:layout_marginBottom="6dp"
        android:hint="@string/emailHint" />
    
	<TextView 
        android:id="@+id/uiphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_below="@+id/uiemailField"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="14dp"  
        />
    <EditText
        android:id="@+id/uiphoneField"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"       
        android:layout_below="@+id/uiphone"
        android:layout_marginBottom="15dp"
        android:hint="@string/phoneHint"
        android:inputType="phone" />

    <TextView 
        android:id="@+id/uiproviderpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/uiphoneField"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="14dp"  
        />
    <EditText
        android:id="@+id/uiproviderpasswordField"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"        
        android:layout_below="@+id/uiproviderpassword"
        android:layout_marginBottom="15dp"
        android:hint="@string/passwordHint"
        android:password="true"
        />
    
    <RelativeLayout 
        android:id="@+id/buttonsArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/uiproviderpasswordField" >
	<Button
        android:id="@+id/uiOKButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"               
        android:layout_marginRight="40dp"
        android:text="@string/submitButton"
        android:clickable="true"
        android:onClick="uiSubmitClick" />
    <Button
        android:id="@+id/resetButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/uiOKButton"        
        android:clickable="true"
        android:onClick="uiResetClick"
        android:text="@string/resetButton" />    
    </RelativeLayout>
</RelativeLayout>
</ScrollView>