<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    android:padding="20dp"
    android:background="#90006400"
    >

    <TextView
        android:id="@+id/forgetPasswordTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:text="@string/forgetPasswordTitle"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="15dp" />
    
    <TextView 
        android:id="@+id/forgetfirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetProviderId"
        android:layout_below="@+id/forgetPasswordTitle"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="14dp" 
        />
    <EditText
        android:id="@+id/forgetfirstnameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/forgetfirstName"
        android:layout_marginBottom="6dp"        
        android:hint="@string/firstnameHint" />
    
    <TextView 
        android:id="@+id/forgetlastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uilName"
        android:layout_below="@+id/forgetfirstnameField"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:textSize="14dp"  
        />
    <EditText
        android:id="@+id/forgetlastnameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/forgetlastName"
        android:layout_marginBottom="20dp"
        android:hint="@string/lastnameHint" />
   
    <RelativeLayout
        android:id="@+id/buttonsArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgetlastnameField"
        android:gravity="center_horizontal">
    <Button
        android:id="@+id/forgetOKButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"                       
        android:text="@string/okButton"
        android:layout_marginRight="40dp"        
        android:onClick="forgetOkClick" />
    <Button
        android:id="@+id/forgetresetButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"                
        android:layout_toRightOf="@+id/forgetOKButton"                
        android:onClick="forgetResetClick"
        android:text="@string/resetButton" />
    </RelativeLayout>
</RelativeLayout>