<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#90006400" >

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:text="@string/titleText" />

    <TextView
        android:id="@+id/welcomeQuestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/welcomeTitle"
        android:layout_marginBottom="30dp"
        android:textSize="14dp"
        android:text="@string/welcomeQuestion" />

    <RelativeLayout 
        android:id="@+id/optionsArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"        
        android:layout_below="@+id/welcomeQuestion" >
    <Button
        android:id="@+id/patient"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="14dp"                
        android:text="@string/patient"
        android:layout_marginRight="40dp"
        android:onClick="patientOnClick" />

    <Button
        android:id="@+id/provider"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/provider"
        android:textSize="14dp"        
        android:layout_toRightOf="@+id/patient"
        android:onClick="providerOnClick" />
    </RelativeLayout>

</RelativeLayout>
